--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-preset-es2015": "^6.6.0",
+    "deku": "^1.0.0",
+    "query-dom": "^3.0.8",
     "semistandard": "^7.0.5",
-    "snazzy": "^3.0.1"
+    "snazzy": "^3.0.1",
+    "virtual-element": "^1.2.0"
   }
 }
