--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "dom-to-jsx",
+  "name": "dom-to-vdom",
   "version": "0.0.0",
-  "description": "Get jsx from DOM",
+  "description": "Get virtual dom from normal browser dom",
   "main": "dist/index.js",
   "scripts": {
     "test": "ava --verbose && semistandard | snazzy",
     "build": "rm -rf dist && mkdir -p dist && babel lib --out-dir dist",
     "watch": "rm -rf dist && mkdir -p dist && babel -w lib --out-dir dist",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "posttest": "readme package.json --travis > readme.md"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/micnews/dom-to-jsx.git"
+    "url": "git+https://github.com/micnews/dom-to-vdom.git"
   },
   "keywords": [
-    "jsx",
-    "dom"
+    "vdom",
+    "dom",
+    "virtual dom"
   ],
   "author": "mic.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/micnews/dom-to-jsx/issues"
+    "url": "https://github.com/micnews/dom-to-vdom/issues"
   },
-  "homepage": "https://github.com/micnews/dom-to-jsx#readme",
+  "homepage": "https://github.com/micnews/dom-to-vdom#readme",
   "devDependencies": {
     "ava": "^0.14.0",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-preset-es2015": "^6.6.0",
     "deku": "^1.0.0",
+    "package-json-to-readme": "^1.5.1",
     "query-dom": "^3.1.0",
     "semistandard": "^7.0.5",
     "snazzy": "^3.0.1",
